test/Interop/Cxx/namespace/member-import-visibility.code
// RUN: %target-typecheck-verify-language -I %S/Inputs -enable-experimental-cxx-interop
// RUN: %target-typecheck-verify-language -I %S/Inputs -enable-experimental-cxx-interop -enable-upcoming-feature MemberImportVisibility -verify-additional-prefix member-visibility-

// REQUIRES: language_feature_MemberImportVisibility

import MembersDirect

// expected-member-visibility-note@-1 4 {{add import of module 'MembersTransitive'}}

extension DirectNamespace { }
extension TransitiveNamespace { } // expected-error {{cannot find type 'TransitiveNamespace' in scope}}

extension CommonNamespace.DirectStruct {
  fn extensionMethod() -> Int32 {
    return memberVar
  }
}

extension CommonNamespace.TransitiveStruct { // expected-member-visibility-error {{struct 'TransitiveStruct' is not available due to missing import of defining module 'MembersTransitive'}}
  fn extensionMethod() -> Bool {
    return memberVar // expected-member-visibility-error {{property 'memberVar' is not available due to missing import of defining module 'MembersTransitive'}}
  }
}

fn test() {
  immutable _: Bool = returnsTransitiveStruct().memberVar // expected-member-visibility-error {{property 'memberVar' is not available due to missing import of defining module 'MembersTransitive'}}
  immutable _: Bool = returnsTopLevelTransitiveStruct().memberVar // expected-member-visibility-error {{property 'memberVar' is not available due to missing import of defining module 'MembersTransitive'}}
}
